feat: add more translation

--- a/Blog.Admin/Views/Domain/Index.cshtml
+++ b/Blog.Admin/Views/Domain/Index.cshtml
@@ -1,83 +1,84 @@
+@using Blog.Admin.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model Blog.Admin.Models.DomainViewModel
+@inject CommonLocalizationService CommonLocalization
 
 @{
     Layout = "_Layout2";
 }
 
 
-<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="pt-4">
-        <div class="sm:flex sm:items-center">
-            <div class="sm:flex-auto">
-                <h1 class="text-2xl font-semibold text-gray-900">Domains</h1>
-                <p class="mt-2 text-sm text-gray-700">A list of all the domains in system</p>
-            </div>
-            <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <a asp-controller="Domain" asp-action="Create" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add domain</a>
-            </div>
+<div class="pt-10 pb-16">
+    <div class="sm:flex sm:items-center">
+        <div class="sm:flex-auto">
+            <h1 class="text-2xl font-semibold text-gray-900">@CommonLocalization.Get("域")</h1>
+            <p class="mt-2 text-sm text-gray-700">A list of all the domains in system</p>
         </div>
-        <div class="mt-8 flex flex-col">
-            <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-                    @if (Model.Domains.Count > 0)
-                    {
-                        <table class="min-w-full divide-y divide-gray-300">
-                            <thead>
-                            <tr>
-                                <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6 md:pl-0">Name</th>
-                                <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">User Default</th>
-                                <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6 md:pr-0">
-                                    <span class="sr-only">Edit</span>
-                                    <span class="sr-only">Delete</span>
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody class="divide-y divide-gray-200">
+        <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+            <a asp-controller="Domain" asp-action="Create" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">@CommonLocalization.Get("新增域")</a>
+        </div>
+    </div>
+    <div class="mt-8 flex flex-col">
+        <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+            <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                @if (Model.Domains.Count > 0)
+                {
+                    <table class="min-w-full divide-y divide-gray-300">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6 md:pl-0">@CommonLocalization.Get("名称")</th>
+                            <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">@CommonLocalization.Get("默认")</th>
+                            <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6 md:pr-0">
+                                <span class="sr-only">@CommonLocalization.Get("编辑")</span>
+                                <span class="sr-only">@@CommonLocalization.Get("删除")</span>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-200">
 
-                            @for (var i = 0; i < Model.Domains.Count; i++)
-                            {
-                                var domain = Model.Domains[i];
-                                <tr>
-                                    <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 md:pl-0">
-                                        <a asp-controller="Home" asp-action="Index" asp-route-domainId="@domain.Id">@domain.Name</a>
-                                    </td>
-                                    @if (Model.DefaultDomain == domain.Id)
-                                    {
-                                        <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">is default</td>
-                                    }
-                                    else
-                                    {
-                                        <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">
-                                            <form method="POST" asp-action="SetDefaultDomain" asp-controller="Domain">
-                                                <input type="hidden" name="id" value="@domain.Id"/>
-                                                <button type="submit" class="text-indigo-600 hover:text-indigo-900">Set Default</button>
-                                            </form>
-                                        </td>
-                                    }
-                                    <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6 md:pr-0">
-                                        <a asp-action="Edit" asp-route-id="@domain.Id" class="text-indigo-600 hover:text-indigo-900">Edit</a>
-                                        <form id="delete-domain-form-@domain.Id" method="POST" asp-action="DeleteDomain" asp-controller="Domain">
+                        @for (var i = 0; i < Model.Domains.Count; i++)
+                        {
+                            var domain = Model.Domains[i];
+                            <tr>
+                                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 md:pl-0">
+                                    <a asp-controller="Home" asp-action="Index" asp-route-domainId="@domain.Id">@domain.Name</a>
+                                </td>
+                                @if (Model.DefaultDomain == domain.Id)
+                                {
+                                    <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">@CommonLocalization.Get("是")</td>
+                                }
+                                else
+                                {
+                                    <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">
+                                        <form method="POST" asp-action="SetDefaultDomain" asp-controller="Domain">
                                             <input type="hidden" name="id" value="@domain.Id"/>
+                                            <button type="submit" class="text-indigo-600 hover:text-indigo-900">@CommonLocalization.Get("选择")</button>
                                         </form>
-                                        <button x-on:click="popUpDanger('Delete domain confirm', 'are you sure you want to delete the domain of @domain.Name (@domain.Id)?', 'Cancel', 'Delete', '#delete-domain-form-@domain.Id')" class="text-indigo-600 hover:text-indigo-900">Delete</button>
                                     </td>
-                                </tr>
-                            }
-                            </tbody>
-                        </table>
-                    }
-                    else
-                    {
-                        <div class="px-4 sm:px-6 md:px-0 cursor-default">
-                            <div class="relative block w-full h-48 rounded-lg border-2 border-dashed border-gray-300 p-12 text-center focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                                <svg class="mx-auto h-12 w-12 text-gray-400" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v20c0 4.418 7.163 8 16 8 1.381 0 2.721-.087 4-.252M8 14c0 4.418 7.163 8 16 8s16-3.582 16-8M8 14c0-4.418 7.163-8 16-8s16 3.582 16 8m0 0v14m0-4c0 4.418-7.163 8-16 8S8 28.418 8 24m32 10v6m0 0v6m0-6h6m-6 0h-6"/>
-                                </svg>
-                                <span class="mt-2 block text-sm font-medium text-gray-900">There is no Domain</span>
-                            </div>
+                                }
+                                <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6 md:pr-0">
+                                    <a asp-action="Edit" asp-route-id="@domain.Id" class="text-indigo-600 hover:text-indigo-900">@CommonLocalization.Get("编辑")</a>
+                                    <form id="delete-domain-form-@domain.Id" method="POST" asp-action="DeleteDomain" asp-controller="Domain">
+                                        <input type="hidden" name="id" value="@domain.Id"/>
+                                    </form>
+                                    <button x-on:click="popUpDanger('Delete domain confirm', 'are you sure you want to delete the domain of @domain.Name (@domain.Id)?', 'Cancel', 'Delete', '#delete-domain-form-@domain.Id')" class="text-indigo-600 hover:text-indigo-900">@CommonLocalization.Get("删除")</button>
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                }
+                else
+                {
+                    <div class="px-4 sm:px-6 md:px-0 cursor-default">
+                        <div class="relative block w-full h-48 rounded-lg border-2 border-dashed border-gray-300 p-12 text-center focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                            <svg class="mx-auto h-12 w-12 text-gray-400" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v20c0 4.418 7.163 8 16 8 1.381 0 2.721-.087 4-.252M8 14c0 4.418 7.163 8 16 8s16-3.582 16-8M8 14c0-4.418 7.163-8 16-8s16 3.582 16 8m0 0v14m0-4c0 4.418-7.163 8-16 8S8 28.418 8 24m32 10v6m0 0v6m0-6h6m-6 0h-6"/>
+                            </svg>
+                            <span class="mt-2 block text-sm font-medium text-gray-900">There is no Domain</span>
                         </div>
-                    }
-                </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
