--- a/Blog.Admin/Views/Shared/_Layout3.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout3.cshtml
@@ -1,3 +1,4 @@
+@* 登录/注册 Layout *@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-white">
 <head>
@@ -8,7 +9,6 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 </head>
 <body class="h-full">
-
 <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8 bg-gray-100">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
